fix chat overwrap

--- a/src/components/scenes-chat/scenes-chat.css
+++ b/src/components/scenes-chat/scenes-chat.css
@@ -159,7 +159,9 @@
     width: 100%;
 }
 .mes-info{
-	margin: 10px 0px;
+	width: calc(100% - 100px);
+    overflow-wrap: break-word;
+    margin: 10px 0px;
 }
 .mes-info-name{
 	font-family: "FuturaBookC";
